# dlm-Android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
Docs/: Architecture.md  Build.md  Contributing.md  JNIBridge.md  NativeCore.md  README.md  Resolvers.md  Scheduler.md  Security.md  Testing.md  UI.md  UserGuide.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dlm/android/: DlmApplication.kt
app/src/main/java/com/dlm/android/repo/: AppContainer.kt  QueueRepository.kt  SafMover.kt  SettingsStore.kt  StatusCenter.kt
app/src/main/java/com/dlm/android/scheduler/: QueueModels.kt  QueueScheduler.kt  QueueState.kt
app/src/main/java/com/dlm/android/service/: DownloadService.kt
app/src/main/java/com/dlm/android/ui/: AddUrlDialog.kt  MainActivity.kt  QueueViewModel.kt
app/src/main/java/com/dlm/android/ui/screens/: ArchiveOrgLoginScreen.kt  Components.kt  DownloadsScreen.kt  LinkgrabberScreen.kt  ResolvingBanner.kt  SettingsScreen.kt  StatusScreen.kt
app/src/main/java/com/dlm/android/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/dlm/android/ui/util/: Format.kt
app/src/main/java/com/dlm/android/ytdlp/: YtdlpManager.kt  YtdlpUpdateWorker.kt
app/src/main/java/guru/freberg/dlm/: DlmApplication.kt
app/src/main/java/guru/freberg/dlm/repo/: AppContainer.kt  QueueRepository.kt  SafMover.kt  SaveLayout.kt  SettingsStore.kt  StatusCenter.kt
app/src/main/java/guru/freberg/dlm/scheduler/: QueueModels.kt  QueueScheduler.kt  QueueState.kt
app/src/main/java/guru/freberg/dlm/service/: DownloadService.kt
app/src/main/java/guru/freberg/dlm/ui/: AddUrlDialog.kt  MainActivity.kt  QueueViewModel.kt
app/src/main/java/guru/freberg/dlm/ui/screens/: ArchiveOrgLoginScreen.kt  Components.kt  DownloadsScreen.kt  LinkgrabberScreen.kt  ResolvingBanner.kt  SettingsScreen.kt  StatusScreen.kt
app/src/main/java/guru/freberg/dlm/ui/theme/: Color.kt  Theme.kt
app/src/main/java/guru/freberg/dlm/ui/util/: FaviconFetcher.kt  Format.kt  SiteGrouping.kt
app/src/main/java/guru/freberg/dlm/ytdlp/: YtdlpManager.kt  YtdlpUpdateWorker.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/dlm/android/: FakeStore.kt  SchedulerParityTest.kt
app/src/test/java/guru/freberg/dlm/: FakeStore.kt  SchedulerParityTest.kt  SiteGroupingTest.kt
baselineprofile/: build.gradle.kts
baselineprofile/src/main/java/guru/freberg/dlm/baselineprofile/: BaselineProfileGenerator.kt
core/: build.gradle.kts  consumer-rules.pro
core/src/androidTest/java/com/dlm/core/: NativeSmokeTest.kt
core/src/androidTest/java/guru/freberg/dlm/core/: NativeSmokeTest.kt
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/host-tests/: CMakeLists.txt
core/src/main/cpp/jni/: jni_auth.c  jni_common.h  jni_engine.c  jni_extract.c  jni_init.c  jni_store.c  jni_util.c  jni_verify.c
core/src/main/cpp/libdlm/: download.c  extract.c  httpget.c  httpget.h  iaauth.c  internal.h  store.c  util.c  verify.c
core/src/main/cpp/libdlm/extractors/: archiveorg.c  archiveorg.h  ytdlp.c  ytdlp.h
core/src/main/cpp/libdlm/include/dlm/: dlm.h  extract.h  iaauth.h  proto.h  store.h  verify.h
core/src/main/cpp/tests/: test_ia.c  test_store.c  test_util.c  test_ytdlp.c
core/src/main/java/com/dlm/core/jni/: NativeAuth.kt  NativeEngine.kt  NativeExtract.kt  NativeLib.kt  NativeStore.kt  NativeVerify.kt  ProgressSink.kt  QueueStore.kt
core/src/main/java/com/dlm/core/model/: Models.kt
core/src/main/java/guru/freberg/dlm/core/jni/: NativeAuth.kt  NativeEngine.kt  NativeExtract.kt  NativeLib.kt  NativeStore.kt  NativeVerify.kt  ProgressSink.kt  QueueStore.kt
core/src/main/java/guru/freberg/dlm/core/model/: Models.kt
gradle/: libs.versions.toml
scripts/: build-deps.sh
